--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
+    "react-phone-input-2": "^2.15.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
