--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "mapbox-gl": "^2.7.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-leaflet": "^3.2.5",
     "react-phone-input-2": "^2.15.0",
     "react-responsive-carousel": "^3.2.22",
