--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.7.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "swiper": "^8.1.4",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.2"
   },
