Footer and homepage changes

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-leaflet": "^3.2.5",
+    "react-multi-carousel": "^2.8.0",
     "react-phone-input-2": "^2.15.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
